--- a/source/sass/blocks/interested.scss
+++ b/source/sass/blocks/interested.scss
@@ -3,13 +3,20 @@
   background-color: $white-color;
   color: $black-color;
   border: solid 2px #F81515;
+  text-align: center;
+  margin-bottom: 49px;
 
   &__title {
     @include text-parameters (normal, bold , 18px, 26px, uppercase);
+    @include reset;
+    margin-top: 33px;
   }
 
   &__text {
     @include text-parameters (normal, normal , 14px, 26px, uppercase);
+    @include reset;
+    margin-top: 20px;
+    margin-bottom: 27px;
   }
 }
 
