--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -12,8 +12,15 @@
 
 .intro-description__slogan {
   @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+  margin-top: 32px;
+  text-align: center;
 }
 
 .intro-description__text {
   @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  @include reset;
+  margin-top: 30px;
+  margin-bottom: 27px;
+  text-align: center;
 }
