--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,10 +1,10 @@
 
 .footer {
-  background-color: $white-color;
-  border: solid 2px #E6D03B;
-  width: 318px;
-  text-align: center;
+  padding: 28.5px 78px 26px 76px;
   margin-top: 10px;
+  text-align: center;
+  border: solid 2px #E6D03B;
+  background-color: $white-color;
 
   &__hashtag {
     @include text-parameters (normal, bold , 21px, 26px, uppercase);
