--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,7 @@
 
 .advantages {
   background-color: $white-color;
-  border: solid 2px #45E157;
+  border: solid 2px #45e157;
 }
 
 .dignity__group {
