--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,7 +3,7 @@
   padding: 28.5px 78px 26px 76px;
   margin-top: 10px;
   text-align: center;
-  border: solid 2px #E6D03B;
+  border: solid 2px #e6d03b;
   background-color: $white-color;
 
   &__hashtag {
