--- a/source/sass/blocks/interested.scss
+++ b/source/sass/blocks/interested.scss
@@ -2,7 +2,7 @@
 .interested {
   background-color: $white-color;
   color: $black-color;
-  border: solid 2px #F81515;
+  border: solid 2px #f81515;
   text-align: center;
   margin-bottom: 49px;
 
