--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,7 +1,7 @@
 
 .photo {
   background-color: $white-color;
-  border: 2px solid #4BD5E1;
+  border: 2px solid #4bd5e1;
   padding: 32px 20px 0px 20px;
 }
 
@@ -22,7 +22,6 @@
 }
 
 .gallery {
-
   &__item {
     margin-bottom: 39px;
   }
