--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,7 +1,7 @@
 
 .video {
   background-color: $white-color;
-  border: 2px solid #EE284D;
+  border: 2px solid #ee284d;
   text-align: center;
 
   &__title {
