--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,11 +1,11 @@
 
 // Цвета
 
-$white-color: #FFFFFF;
+$white-color: #ffffff;
 $black-color: #000000;
-$background-color: #F2F2F2;
-$background-dignity: #81B3D2;
-$background-dignity--folder: #EEEEEE;
+$background-color: #f2f2f2;
+$background-dignity: #81b3d2;
+$background-dignity--folder: #eeeeee;
 
 // Контейнеры
 
