--- a/source/sass/Fonts.scss
+++ b/source/sass/Fonts.scss
@@ -3,7 +3,8 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: local("PT Sans"), local("PTSans-Regular"),
+  src: local("PT Sans"),
+    local("PTSans-Regular"),
     url("../fonts/ptsans.woff2") format("woff2"), /* Super Modern Browsers */
     url("../fonts/ptsans.woff") format("woff"), /* Modern Browsers */
 }
@@ -12,7 +13,8 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: local("PT Sans Bold"), local("PTSans-Bold"),
+  src: local("PT Sans Bold"),
+    local("PTSans-Bold"),
     url("../fonts/ptsansbold.woff2") format("woff2"), /* Super Modern Browsers */
     url("../fonts/ptsansbold.woff") format("woff"), /* Modern Browsers */
 }
