--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,4 +1,3 @@
-
 .advantages {
   background-color: $white-color;
   border: solid 2px #45e157;
@@ -35,7 +34,7 @@
 
 .dignity__list {
   @include reset-list;
-  padding: 35px 12px 35px 0px;
+  padding: 35px 12px 35px 0;
 }
 
 .dignity__item {
