--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,8 +1,7 @@
-
 .photo {
   background-color: $white-color;
   border: 2px solid #4bd5e1;
-  padding: 32px 20px 0px 20px;
+  padding: 32px 20px 0 20px;
 }
 
 .photo-intro {
