--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
 // Начните писать стили здесь
 
-// @import "normalize.scss";
+@import "normalize.scss";
 @import "fonts.scss";
 @import "scaffolding.scss";
 @import "variables.scss";
