--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,3 +11,8 @@ $background-dignity--folder: #eeeeee;
 $mobile-width-container: 320px;
 $tablet-width-container: 800px;
 $desktop-width-container: 1200px;
+
+// Шрифты
+
+$base-font: "PT Sans";
+$spare-font: "Arial";
