--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -4,42 +4,18 @@
   padding: 32px 20px 0 20px;
 }
 
-.photo-intro {
+.photo__intro {
   text-align: center;
 
-  &__title {
+  &-title {
     @include text-parameters (normal, bold , 18px, 26px, uppercase);
     @include reset;
   }
 
-  &__description {
+  &-description {
     @include text-parameters (normal, normal , 14px, 26px, uppercase);
     @include reset;
     margin-top: 35px;
     margin-bottom: 43px;
-  }
-}
-
-.gallery {
-  &__item {
-    margin-bottom: 39px;
-  }
-
-  &__title {
-    @include text-parameters (normal, bold , 14px, 24px, uppercase);
-    @include reset;
-    margin-top: 11px;
-    margin-bottom: 0;
-  }
-
-  &__author {
-    @include text-parameters (normal, normal , 14px, 24px, none);
-  }
-
-  &__like {
-    @include text-parameters (normal, bold , 14px, 24px, none);
-    display: block;
-    margin-top: 13px;
-    margin-left: 37px;
   }
 }
