--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -3,258 +3,19 @@
   border: solid 2px #42c55b;
 }
 
-.feedback__section {
-  @include reset;
-  border: none;
-  margin-bottom: 20px;
-}
-
-.reviews-description {
+.reviews__description {
   text-align: center;
 
-  &__slogan {
+  &-slogan {
     @include text-parameters (normal, bold , 18px, 26px, uppercase);
     @include reset;
     margin-top: 36px;
   }
 
-  &__text {
+  &-text {
     @include text-parameters (normal, normal , 14px, 26px, uppercase);
     @include reset;
     margin-top: 35px;
     margin-bottom: 37px;
-  }
-}
-
-// Форма
-
-.full-name {
-  padding: 0 14px 26px;
-
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 19px;
-    text-align: center;
-  }
-
-  &__list {
-    @include reset-list;
-  }
-
-  &__label {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-  }
-
-  &__item-input {
-    margin-left: 12px;
-    padding-left: 22px;
-    width: 170px;
-    height: 58px;
-    background-color: $background-color;
-    border: none;
-  }
-
-  &__item-input--name {
-    width: 208px;
-    height: 58px;
-  }
-
-  &__item {
-    margin-bottom: 20px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.contact-information {
-  padding: 0 20px 29px 20px;
-
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 17px;
-    text-align: center;
-  }
-
-  &__list {
-    @include reset-list;
-  }
-
-  &__label {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    margin-bottom: 6px;
-    margin-left: 22px;
-  }
-
-  &__item-phone,
-  &__item-email {
-    padding-left: 22px;
-    width: 258px;
-    height: 50px;
-    background-color: $background-color;
-    border: none;
-  }
-
-  &__item {
-    margin-bottom: 14px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.impression {
-  padding: 0 37px 27px 24px;
-
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-
-    margin-bottom: 25px;
-    text-align: center;
-  }
-
-  &__list {
-    @include reset-list;
-  }
-
-  &__label {
-    @include text-parameters (normal, bold , 14px, 26px, uppercase);
-  }
-
-  &__item-point {
-    margin-right: 26px;
-  }
-
-  &__item {
-    margin-bottom: 21px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.attractions {
-  padding: 0 26px 31px 24px;
-
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 25px;
-    text-align: center;
-  }
-
-  &__list {
-    @include reset-list;
-  }
-
-  &__label {
-    @include text-parameters (normal, bold , 14px, 26px, uppercase);
-  }
-
-  &__item-point {
-    margin-right: 29px;
-  }
-
-  &__item {
-    margin-bottom: 21px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.emotions {
-  padding: 0 21px 31px 19px;
-
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 15px;
-    text-align: center;
-  }
-
-  &__input {
-    padding: 13px 23px 29px 21px;
-    width: 235px;
-    height: 118px;
-    background-color: $background-color;
-    border: none;
-  }
-}
-
-.feedback__button {
-  @include text-parameters (normal, bold , 21px, 26px, uppercase);
-  padding: 18.5px 33px 13.5px 32px;
-  margin-left: 19px;
-  border: none;
-  background-color: $background-dignity;
-  color: $white-color;
-}
-
-.feedback__error-popup {
-  display: none;
-  padding: 40px 42px 35px 41px;
-  border: solid 2px #5e3be1;
-}
-
-.error-popup {
-  text-align: center;
-
-  &__title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
-
-  &__description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    @include reset;
-    margin-top: 25px;
-    margin-bottom: 40px;
-  }
-
-  &__link {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    padding: 18px 64px 14px;
-    text-decoration: none;
-    background-color: $background-dignity;
-    color: $white-color;
-  }
-}
-
-.feedback__success-popup {
-  display: none;
-  padding: 38px 20px 20px;
-  border: solid 2px #fc4f5f;
-}
-
-.success-popup {
-  text-align: center;
-
-  &__title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
-
-  &__description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    @include reset;
-    margin-top: 25px;
-    margin-bottom: 50px;
-  }
-
-  &__link {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    padding: 16px 76px;
-    text-decoration: none;
-    background-color: $background-dignity;
-    color: $white-color;
-  }
-
-  &__link-background {
-    margin: -20px -20px;
-    padding: 30px 15px;
-    background-color: $background-color;
   }
 }
