--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -7,7 +7,7 @@ img {
 }
 
 body {
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: $base-font, $spare-font, sans-serif;
 }
 
 .page__body {
@@ -18,6 +18,6 @@ body {
 
 .container {
   position: relative;
-  max-width: 320px;
+  max-width: $mobile-width-container;
   margin: 0 auto;
 }
