--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,21 +2,34 @@
 
 @import "normalize.scss";
 @import "fonts.scss";
-@import "scaffolding.scss";
 @import "variables.scss";
 @import "mixins.scss";
+@import "scaffolding.scss";
 
 // index.html
-@import "blocks/header.scss";
+
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
 @import "blocks/intro.scss";
+@import "blocks/intro-description.scss";
 @import "blocks/advantages.scss";
+@import "blocks/dignity.scss";
 @import "blocks/interested.scss";
 @import "blocks/map.scss";
 @import "blocks/footer.scss";
 
 // photo.html
+
 @import "blocks/photo.scss";
+@import "blocks/gallery.scss";
 @import "blocks/video.scss";
 
 // form.html
+
 @import "blocks/reviews.scss";
+@import "blocks/form/feedback.scss";
+@import "blocks/form/full-name.scss";
+@import "blocks/form/contact-information.scss";
+@import "blocks/form/impression.scss";
+@import "blocks/form/attractions.scss";
+@import "blocks/form/emotions.scss";
