--- a/source/sass/Fonts.scss
+++ b/source/sass/Fonts.scss
@@ -1,14 +1,13 @@
-/* pt-sans-regular - latin_cyrillic */
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
   src: local("PT Sans"),
     local("PTSans-Regular"),
-    url("../fonts/ptsans.woff2") format("woff2"), /* Super Modern Browsers */
-    url("../fonts/ptsans.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/ptsans.woff2") format("woff2"),
+    url("../fonts/ptsans.woff") format("woff");
 }
-/* pt-sans-700 - latin_cyrillic */
+
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -16,5 +15,5 @@
   src: local("PT Sans Bold"),
     local("PTSans-Bold"),
     url("../fonts/ptsansbold.woff2") format("woff2"), /* Super Modern Browsers */
-    url("../fonts/ptsansbold.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/ptsansbold.woff") format("woff"); /* Modern Browsers */
 }
