--- a/source/sass/blocks/dignity.scss
+++ b/source/sass/blocks/dignity.scss
@@ -1,66 +1,51 @@
-.dignity {
-  &__title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
+.dignity__group {
+  padding: 34px 13px 39px;
+  text-align: center;
+  background-color: $background-dignity;
+  color: $white-color;
 
-  &__number {
-    @include text-parameters (normal, normal, 14px, 26px, uppercase);
+  &--folded {
+    padding: 25px 25px;
+    background-color: $background-dignity--folder;
+    color: $black-color;
   }
+}
 
-  &__text {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    margin-bottom: 0;
-  }
+.dignity__title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+  margin-bottom: 15px;
+}
+
+.dignity__number {
+  @include text-parameters (normal, normal, 14px, 26px, uppercase);
+}
+
+.dignity__text {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  margin-bottom: 0;
 }
 
 .dignity__list {
   @include reset-list;
-  padding: 35px 12px 35px 0;
+  padding: 35px 11px 35px 70px;
 }
 
 .dignity__item {
-  margin-left: 67px;
-  position: relative;
+  margin-bottom: 26px;
 
-  &-title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  &:last-child {
+    margin-bottom: 0;
   }
+}
 
-  &-text {
-    @include text-parameters (normal, normal , 14px, 22px, uppercase);
-  }
+.dignity__item-title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+}
 
-  // &--housing::before {
-  //   content: "";
-  //   position: absolute;
-  //   left: ;
-  //   top: ;
-  //   width: ;
-  //   height: ;
-  //   background-image: url(../img/icon-house.svg);
-  //   background-repeat: no-repeat;
-  // }
-
-  // &--souvenirs::before {
-  //   content: "";
-  //   position: absolute;
-  //   left: ;
-  //   bottom: ;
-  //   width: ;
-  //   height: ;
-  //   background-image: url(../img/icon-gift.svg);
-  //   background-repeat: no-repeat;
-  // }
-
-  // &--hamburger::before {
-  //   content: "";
-  //   position: absolute;
-  //   left: ;
-  //   bottom: ;
-  //   width: ;
-  //   height: ;
-  //   background-image: url(../img/icon-burger.svg);
-  //   background-repeat: no-repeat;
-  // }
+.dignity__item-text {
+  @include text-parameters (normal, normal , 14px, 22px, uppercase);
+  @include reset;
+  margin-top: 28px;
 }
