--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,17 +1,12 @@
 .footer {
-  padding: 28.5px 78px 26px 76px;
-  margin-top: 10px;
+  padding: 35px 85px 23px;
   text-align: center;
   border: solid 2px #e6d03b;
   background-color: $white-color;
-
-  &__hashtag {
-    @include text-parameters (normal, bold , 21px, 26px, uppercase);
-    text-decoration: none;
-    color: $black-color;
-  }
 }
 
-.footer__social-list {
-  @include reset-list;
+.footer__hashtag {
+  @include text-parameters (normal, bold , 21px, 26px, uppercase);
+  text-decoration: none;
+  color: $black-color;
 }
