--- a/source/sass/blocks/form/attractions.scss
+++ b/source/sass/blocks/form/attractions.scss
@@ -1,29 +1,29 @@
 .attractions {
   padding: 0 26px 31px 24px;
+}
 
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 25px;
-    text-align: center;
-  }
+.attractions__subtitle {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  margin-bottom: 25px;
+  text-align: center;
+}
 
-  &__list {
-    @include reset-list;
-  }
+.attractions__list {
+  @include reset-list;
+}
 
-  &__label {
-    @include text-parameters (normal, bold , 14px, 26px, uppercase);
-  }
+.attractions__label {
+  @include text-parameters (normal, bold , 14px, 26px, uppercase);
+}
 
-  &__item-point {
-    margin-right: 29px;
-  }
+.attractions__item-point {
+  margin-right: 29px;
+}
 
-  &__item {
-    margin-bottom: 21px;
-  }
+.attractions__item {
+  margin-bottom: 21px;
+}
 
-  &__item:last-child {
-    margin-bottom: 0;
-  }
+.attractions__item:last-child {
+  margin-bottom: 0;
 }
