--- a/source/sass/blocks/form/feedback.scss
+++ b/source/sass/blocks/form/feedback.scss
@@ -1,70 +1,76 @@
+// Форма
+
 .feedback__section {
   @include reset;
   border: none;
   margin-bottom: 20px;
 }
 
-// Форма
+// Попап с ошибкой
 
 .feedback__error {
   display: none;
   padding: 40px 42px 35px 41px;
   border: solid 2px #5e3be1;
   text-align: center;
-
-  &-title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
-
-  &-description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    @include reset;
-    margin-top: 25px;
-    margin-bottom: 40px;
-  }
-
-  &-link {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    padding: 18px 64px 14px;
-    text-decoration: none;
-    background-color: $background-dignity;
-    color: $white-color;
-  }
 }
+
+.feedback__error-title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+}
+
+.feedback__error-description {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  @include reset;
+  margin-top: 25px;
+  margin-bottom: 40px;
+}
+
+.feedback__error-link {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  padding: 18px 64px 14px;
+  text-decoration: none;
+  background-color: $background-dignity;
+  color: $white-color;
+}
+
+// Попап с успешной отправкой
 
 .feedback__success {
   display: none;
   padding: 38px 20px 20px;
   border: solid 2px #fc4f5f;
   text-align: center;
-
-  &-title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
-
-  &-description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    @include reset;
-    margin-top: 25px;
-    margin-bottom: 50px;
-  }
-
-  &-link {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    padding: 16px 76px;
-    text-decoration: none;
-    background-color: $background-dignity;
-    color: $white-color;
-  }
-
-  &-linkbg {
-    margin: -20px -20px;
-    padding: 30px 15px;
-    background-color: $background-color;
-  }
 }
+
+.feedback__success-title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+}
+
+.feedback__success-description {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  @include reset;
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+
+.feedback__success-link {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  padding: 16px 76px;
+  text-decoration: none;
+  background-color: $background-dignity;
+  color: $white-color;
+}
+
+.feedback__success-linkbg {
+  margin: -20px -20px;
+  padding: 30px 15px;
+  background-color: $background-color;
+}
+
+// Кнопка отправки
 
 .feedback__button {
   @include text-parameters (normal, bold , 21px, 26px, uppercase);
