--- a/source/sass/blocks/form/full-name.scss
+++ b/source/sass/blocks/form/full-name.scss
@@ -1,39 +1,39 @@
 .full-name {
   padding: 0 14px 26px;
+}
 
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    margin-bottom: 19px;
-    text-align: center;
-  }
+.full-name__subtitle {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  margin-bottom: 19px;
+  text-align: center;
+}
 
-  &__list {
-    @include reset-list;
-  }
+.full-name__list {
+  @include reset-list;
+}
 
-  &__label {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-  }
+.full-name__label {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+}
 
-  &__item-input {
-    margin-left: 12px;
-    padding-left: 22px;
-    width: 170px;
-    height: 58px;
-    background-color: $background-color;
-    border: none;
-  }
+.full-name__item-input {
+  margin-left: 12px;
+  padding-left: 22px;
+  width: 170px;
+  height: 58px;
+  background-color: $background-color;
+  border: none;
+}
 
-  &__item-input--name {
-    width: 208px;
-    height: 58px;
-  }
+.full-name__item-input--name {
+  width: 208px;
+  height: 58px;
+}
 
-  &__item {
-    margin-bottom: 20px;
-  }
+.full-name__item {
+  margin-bottom: 20px;
+}
 
-  &__item:last-child {
-    margin-bottom: 0;
-  }
+.full-name__item:last-child {
+  margin-bottom: 0;
 }
