--- a/source/sass/blocks/form/impression.scss
+++ b/source/sass/blocks/form/impression.scss
@@ -1,30 +1,29 @@
 .impression {
   padding: 0 37px 27px 24px;
+}
 
-  &__subtitle {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
+.impression__subtitle {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  margin-bottom: 25px;
+  text-align: center;
+}
 
-    margin-bottom: 25px;
-    text-align: center;
-  }
+.impression__list {
+  @include reset-list;
+}
 
-  &__list {
-    @include reset-list;
-  }
+.impression__label {
+  @include text-parameters (normal, bold , 14px, 26px, uppercase);
+}
 
-  &__label {
-    @include text-parameters (normal, bold , 14px, 26px, uppercase);
-  }
+.impression__item-point {
+  margin-right: 26px;
+}
 
-  &__item-point {
-    margin-right: 26px;
-  }
+.impression__item {
+  margin-bottom: 21px;
+}
 
-  &__item {
-    margin-bottom: 21px;
-  }
-
-  &__item:last-child {
-    margin-bottom: 0;
-  }
+.impression__item:last-child {
+  margin-bottom: 0;
 }
