--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -6,16 +6,16 @@
 
 .photo__intro {
   text-align: center;
+}
 
-  &-title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
+.photo__intro-title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+}
 
-  &-description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    @include reset;
-    margin-top: 35px;
-    margin-bottom: 43px;
-  }
+.photo__intro-description {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  @include reset;
+  margin-top: 35px;
+  margin-bottom: 43px;
 }
