--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,13 +1,11 @@
-.site-list {
-  &__item {
-    padding: 10px 78px 5px 77px;
-    background-color: $background-dignity;
-    text-align: center;
-  }
+.site-list__item {
+  padding: 10px 78px 5px 77px;
+  background-color: $background-dignity;
+  text-align: center;
+}
 
-  &__link {
-    @include text-parameters (normal, bold , 18px, 40px, uppercase);
-    color: $white-color;
-    text-decoration: none;
-  }
+.site-list__link {
+  @include text-parameters (normal, bold , 18px, 40px, uppercase);
+  color: $white-color;
+  text-decoration: none;
 }
