--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -2,15 +2,15 @@
   background-color: $white-color;
   border: 2px solid #ee284d;
   text-align: center;
+}
 
-  &__title {
-    @include text-parameters (normal, bold , 18px, 26px, uppercase);
-    @include reset;
-  }
+.video__title {
+  @include text-parameters (normal, bold , 18px, 26px, uppercase);
+  @include reset;
+}
 
-  &__description {
-    @include text-parameters (normal, normal , 14px, 26px, uppercase);
-    margin-top: 35px;
-    margin-bottom: 33px;
-  }
+.video__description {
+  @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  margin-top: 35px;
+  margin-bottom: 33px;
 }
