--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -7,7 +7,7 @@ img {
 }
 
 body {
-  font-family: $base-font, $spare-font, sans-serif;
+  font-family: $base-font;
 }
 
 .page__body {
@@ -20,4 +20,16 @@ body {
   position: relative;
   max-width: $mobile-width-container;
   margin: 0 auto;
+}
+
+@media (min-width: $tablet-width) {
+  .container {
+    max-width: $tablet-width-container;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    max-width: $desktop-width-container;
+  }
 }
