--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/interested.scss";
 @import "blocks/map.scss";
 @import "blocks/footer.scss";
+@import "blocks/social.scss";
 
 // photo.html
 
