--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,13 +6,18 @@ $background-color: #f2f2f2;
 $background-dignity: #81b3d2;
 $background-dignity--folder: #eeeeee;
 
+// Шрифты
+
+$base-font: "PT Sans", "Arial", sans-serif;
+
 // Контейнеры
 
 $mobile-width-container: 320px;
-$tablet-width-container: 800px;
+$tablet-width-container: 768px;
 $desktop-width-container: 1200px;
 
-// Шрифты
+// Breakpoints
 
-$base-font: "PT Sans";
-$spare-font: "Arial";
+$mobile-width: 320px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
