--- a/source/sass/blocks/interested.scss
+++ b/source/sass/blocks/interested.scss
@@ -1,4 +1,5 @@
 .interested {
+  padding: 33px 25px 49px;
   background-color: $white-color;
   color: $black-color;
   border: solid 2px #f81515;
@@ -8,7 +9,6 @@
 .interested__title {
   @include text-parameters (normal, bold , 18px, 26px, uppercase);
   @include reset;
-  margin-top: 33px;
 }
 
 .interested__text {
