--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,11 +1,11 @@
 .photo {
   background-color: $white-color;
   border: 2px solid #4bd5e1;
-  padding: 32px 20px 0 20px;
 }
 
 .photo__intro {
   text-align: center;
+  padding: 32px 9px 20px 12px;
 }
 
 .photo__intro-title {
@@ -17,5 +17,5 @@
   @include text-parameters (normal, normal , 14px, 26px, uppercase);
   @include reset;
   margin-top: 35px;
-  margin-bottom: 43px;
+  margin-bottom: 0;
 }
