--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -5,17 +5,17 @@
 
 .reviews__description {
   text-align: center;
+  padding: 36px 6px 37px 8px;
 }
 
 .reviews__description-slogan {
   @include text-parameters (normal, bold , 18px, 26px, uppercase);
   @include reset;
-  margin-top: 36px;
 }
 
 .reviews__description-text {
   @include text-parameters (normal, normal , 14px, 26px, uppercase);
   @include reset;
   margin-top: 35px;
-  margin-bottom: 37px;
+  margin-bottom: 0;
 }
