--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -4,13 +4,21 @@
   text-align: center;
 }
 
+.video__description {
+  padding: 33px 27px;
+}
+
 .video__title {
   @include text-parameters (normal, bold , 18px, 26px, uppercase);
   @include reset;
 }
 
-.video__description {
+.video__text {
   @include text-parameters (normal, normal , 14px, 26px, uppercase);
   margin-top: 35px;
-  margin-bottom: 33px;
+  margin-bottom: 0;
+}
+
+.video__video {
+  margin-bottom: 49px;
 }
