--- a/source/sass/blocks/dignity.scss
+++ b/source/sass/blocks/dignity.scss
@@ -49,3 +49,57 @@
   @include reset;
   margin-top: 28px;
 }
+
+@media (min-width: $tablet-width) {
+  .dignity {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .dignity__group {
+    max-width: 225px;
+    padding: 44px 32px 44px;
+  }
+
+   .dignity__group--folded {
+    padding: 35px 25px;
+    max-width: 256px;
+  }
+
+  .dignity__group--bridge {
+    order: 2;
+  }
+
+  // .dignity__group--area {
+  //   padding: 53px 33px;
+  // }
+
+  // .dignity__group--road {
+  //   padding: 42px 47px;
+  // }
+
+  // .dignity__group--tourists {
+  //   padding: 40px 40px;
+  // }
+
+  .dignity__list {
+    display: grid;
+    grid-template-columns: 180px 185px 193px;
+    column-gap: 70px;
+    padding: 158px 31px 59px 36px;
+  }
+
+  .dignity__item--housing {
+    max-width: 185px;
+  }
+
+  .dignity__item--hamburger {
+    max-width: 180px;
+    order: 2;
+  }
+
+  .dignity__item--souvenirs {
+    max-width: 193px;
+    order: 3;
+  }
+}
