--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  padding: 35px 85px 23px;
+  width: 146px;
+  padding: 28.5px 85px 23px;
   text-align: center;
   border: solid 2px #e6d03b;
   background-color: $white-color;
@@ -9,4 +10,13 @@
   @include text-parameters (normal, bold , 21px, 26px, uppercase);
   text-decoration: none;
   color: $black-color;
+}
+
+@media (min-width: $tablet-width) {
+  .footer {
+    width: 659px;
+    display: flex;
+    justify-content: space-between;
+    padding: 36px 60px 36px 45px;
+  }
 }
