--- a/source/sass/blocks/intro-description.scss
+++ b/source/sass/blocks/intro-description.scss
@@ -17,6 +17,10 @@
 
 @media (min-width: $tablet-width) {
   .intro__description {
-    padding: 32px 124px 11px;
+    padding: 43px 124px 52px;
+  }
+
+  .intro-description__slogan {
+    font-size: 21px;
   }
 }
