--- a/source/sass/blocks/dignity.scss
+++ b/source/sass/blocks/dignity.scss
@@ -57,13 +57,8 @@
   }
 
   .dignity__group {
-    max-width: 225px;
-    padding: 44px 32px 44px;
-  }
-
-  .dignity__group--folded {
-    padding: 35px 25px;
     max-width: 256px;
+    padding: 43px 32px 32px;
   }
 
   .dignity__group--bridge {
@@ -71,18 +66,15 @@
   }
 
   .dignity__group--area {
-    max-width: 189px;
     padding: 52px 33px;
   }
 
   .dignity__group--road {
-    padding: 42px 49px;
-    max-width: 157px;
+    padding: 42px 50px;
   }
 
   .dignity__group--tourists {
     padding: 42px 47px;
-    max-width: 159px;
   }
 
   .dignity__title {
@@ -91,7 +83,7 @@
 
   .dignity__list {
     display: grid;
-    grid-template-columns: 180px 157px 193px;
+    grid-template-columns: 23.43% 20.44% 25.13%;
     column-gap: 70px;
     padding: 158px 31px 59px 36px;
   }
