--- a/source/sass/blocks/dignity.scss
+++ b/source/sass/blocks/dignity.scss
@@ -50,14 +50,79 @@
   margin-top: 28px;
 }
 
+// Планшет
+
 @media (min-width: $tablet-width) {
   .dignity {
     display: flex;
     flex-wrap: wrap;
   }
 
+  .dignity--folded {
+    max-width: 33.33%;
+  }
+
   .dignity__group {
     max-width: 256px;
+    padding: 43px 32px 32px;
+  }
+
+  .dignity__group--bridge {
+    order: 2;
+  }
+
+  .dignity__group--area {
+    padding: 52px 33px;
+  }
+
+  .dignity__group--road {
+    padding: 42px 50px;
+  }
+
+  .dignity__group--tourists {
+    padding: 42px 47px;
+  }
+
+  .dignity__title {
+    font-size: 21px;
+  }
+
+  .dignity__list {
+    display: grid;
+    grid-template-columns: 23.43% 20.44% 25.13%;
+    column-gap: 70px;
+    padding: 158px 31px 59px 36px;
+  }
+
+  .dignity__item--housing {
+    max-width: 185px;
+  }
+
+  .dignity__item--hamburger {
+    max-width: 180px;
+    order: 2;
+  }
+
+  .dignity__item--souvenirs {
+    max-width: 193px;
+    order: 3;
+  }
+}
+
+// Десктоп
+
+@media (min-width: $desktop-width) {
+  .dignity {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .dignity--folded {
+    max-width: 33.33%;
+  }
+
+  .dignity__group {
+    max-width: 400px;
     padding: 43px 32px 32px;
   }
 
