--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -6,4 +6,12 @@
 .intro__background {
   height: 389px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
+
+  @media (min-width: $tablet-width) {
+    height: 518px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 518px;
+  }
 }
