--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,7 @@ $black-color: #000000;
 $background-color: #f2f2f2;
 $background-dignity: #81b3d2;
 $background-dignity--folder: #eeeeee;
+$background-gallery__subtitle: rgba(0, 0, 0, 0.3);
 
 // Шрифты
 
