--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -5,7 +5,7 @@
 
 .photo__intro {
   text-align: center;
-  padding: 32px 9px 20px 12px;
+  padding: 32px 15px 20px 15px;
 }
 
 .photo__intro-title {
@@ -18,4 +18,24 @@
   @include reset;
   margin-top: 35px;
   margin-bottom: 0;
+}
+
+// Планшет
+
+@media (min-width: $tablet-width) {
+  .photo__intro {
+    padding: 65px 161px;
+  }
+
+  .photo__intro-title {
+    @include text-parameters (normal, bold , 30px, 26px, uppercase);
+  }
+}
+
+// Десктоп
+
+@media (min-width: $desktop-width) {
+  .photo__intro {
+    padding: 102px 377px 67px;
+  }
 }
