--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -22,3 +22,33 @@
 .video__video {
   margin-bottom: 49px;
 }
+
+@media (min-width: $tablet-width) {
+  .video__description {
+    padding: 59px 161px 68px;
+  }
+
+  .video__title {
+    font-size: 30px;
+  }
+
+  .video__video {
+    width: 648px;
+    height: 500px;
+    margin-bottom: 40px;
+  }
+}
+
+// Десктоп
+
+@media (min-width: $desktop-width) {
+  .video__description {
+    padding: 63px 376px 66px;
+  }
+
+  .video__video {
+    width: 800px;
+    height: 500px;
+    margin-bottom: 40px;
+  }
+}
