--- a/source/sass/blocks/form/feedback.scss
+++ b/source/sass/blocks/form/feedback.scss
@@ -80,3 +80,18 @@
   background-color: $background-dignity;
   color: $white-color;
 }
+
+// Планшет
+
+@media (min-width: $tablet-width) {
+  .feedback {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .feedback__button {
+    order: 6;
+    padding: 18.5px 71px 13.5px;
+    margin-left: 0;
+  }
+}
