Попытка построения сеток крупных блоков №1

--- a/source/sass/blocks/form/emotions.scss
+++ b/source/sass/blocks/form/emotions.scss
@@ -10,7 +10,7 @@
 
 .emotions__input {
   padding: 13px 23px 29px 21px;
-  width: 235px;
+  width: 100%;
   height: 118px;
   background-color: $background-color;
   border: none;
