--- a/source/sass/blocks/form/full-name.scss
+++ b/source/sass/blocks/form/full-name.scss
@@ -62,4 +62,12 @@
     width: 50%;
     padding: 0 0 70px 79px;
   }
+
+  .full-name__item-input {
+    width: 65%;
+  }
+
+  .full-name__item-input--name {
+    width: 74%;
+  }
 }
