--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -26,8 +26,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 648px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
   }
 
   .gallery__subtitle {
