--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -35,10 +35,6 @@
     margin-top: -14px;
   }
 
-  .gallery__item {
-    padding: 0;
-  }
-
   .gallery__author {
     display: inline-block;
   }
@@ -46,6 +42,25 @@
   .gallery__like {
     margin-top: -37px;
     text-align: end;
+  }
+
+  .gallery__item {
+    padding: 0;
+    width: 50%;
+  }
+
+  .gallery__img {
+    width: 100%;
+    height: 267px;
+  }
+
+  .gallery__item--full {
+    width: 100%;
+  }
+
+  .gallery__img--full {
+    width: 100%;
+    height: 400px;
   }
 }
 
@@ -62,8 +77,16 @@
 
   .gallery__subtitle {
     margin-top: -90px;
-    background-color: $black-color;
-    opacity: 0.3;
+    background-color: $background-gallery--subtitle;
+    // opacity: 0.3;
     color: $white-color;
+  }
+
+  .gallery__item {
+    width: 33.33%;
+  }
+
+  .gallery__item--full {
+    width: 100%;
   }
 }
