--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,11 @@ $background-dignity: #81b3d2;
 $background-dignity--folder: #eeeeee;
 $background-gallery--subtitle: rgba(0, 0, 0, 0.3);
 
+// Тени
+
+$site-list__item--one: rgba(1, 1, 1, 0.2);
+$site-list__item--two: rgba(255, 255, 255, 0.2);
+
 // Шрифты
 
 $base-font: "PT Sans", "Arial", sans-serif;
