--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,7 +2,28 @@
   padding: 10px 78px 5px 77px;
   background-color: $background-dignity;
   text-align: center;
+  mix-blend-mode: normal;
 }
+
+.site-list__item--main {
+  border-bottom: 1px solid $site-list__item--one;
+  box-shadow: 0 1px 0 $site-list__item--one;
+}
+
+.site-list__item--photo {
+  border-bottom: 1px solid $site-list__item--one;
+  box-shadow: 0 1px 0 $site-list__item--one, inset 0 1px 0 $site-list__item--two;
+}
+
+.site-list__item--form {
+  border-bottom: 1px solid $site-list__item--one;
+  box-shadow: 0 1px 0 $site-list__item--one, inset 0 1px 0 $site-list__item--two;
+}
+
+.site-list__item--academy {
+  box-shadow: inset 0 1px 0 $site-list__item--two;
+}
+
 
 .site-list__link {
   @include text-parameters (normal, bold , 18px, 40px, uppercase);
