--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  padding: 28.5px 85px 23px;
+  padding: 28.5px 84px 23px;
   text-align: center;
   border: solid 2px #e6d03b;
   background-color: $white-color;
@@ -8,12 +8,27 @@
 
 .footer__html-academy {
   @include text-parameters (normal, normal , 14px, 26px, uppercase);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-top: 40px;
 }
 
 .footer__hashtag {
   @include text-parameters (normal, bold , 21px, 26px, uppercase);
+  display: block;
+  margin-bottom: 33.5px;
   text-decoration: none;
   color: $black-color;
+}
+
+.footer__logo {
+  margin-left: 13px;
+}
+
+.footer__copyright {
+  @include reset;
 }
 
 @media (min-width: $tablet-width) {
